[project]
name = "pnogo-api"
dynamic = ["version"]
description = "Pnogo API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "blinker==1.7.0",
    "certifi==2024.2.2",
    "cffi==1.16.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "flask==3.0.2",
    "flask-cors==4.0.0",
    "itsdangerous==2.1.2",
    "jinja2==3.1.3",
    "markupsafe==2.1.5",
    "minio==7.2.5",
    "pillow==10.2.0",
    "psycopg==3.1.18",
    "psycopg-binary==3.1.18",
    "pycparser==2.21",
    "pycryptodome==3.20.0",
    "typing-extensions==4.10.0",
    "tzdata==2024.1",
    "urllib3==2.2.1",
    "werkzeug==3.0.1",
]


[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I"]
